# swift-dreams-are-made-for-dweebs

./: .idanarye.moonicipal.lua  Cargo.toml  Logo.blend  models.blend  models.blend1
.github/workflows/: release.yaml
assets/: Bed.blend  Bed.glb  Confusion.blend  Confusion.glb  Desk.blend  Desk.glb  Dweeb.blend  Dweeb.glb  Level.glb  Level_dynamic.glb  Lightbulb.blend  Lightbulb.glb  Player.blend  Player.glb  Z.blend  Z.glb  registry.json
assets/blueprints/: Player.glb
assets/levels/: Level.glb  Level.yol  index.yoli
src/: arena.rs  bed.rs  camera.rs  desk.rs  dweeb.rs  dweeb_behavior.rs  dweeb_effects.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs  player_controls.rs  score.rs  util.rs
