[package]
name = "swift_dreams_are_made_for_dweebs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.1.1"
bevy = { version = "0.14" }
bevy-tnua = "0.19.0"
bevy-tnua-avian3d = "0.1.0"
# bevy_gltf_blueprints = "0.11.0"
blenvy = { git = "https://github.com/kaosat-dev/Blenvy.git", branch = "blenvy" }
bevy_registry_export = "0.4.0"
serde = { version = "1.0.204", features = ["derive"] }
