[package]
name = "swift_dreams_are_made_for_dweebs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian3d = "0.1.1"
bevy = { version = "0.14" }
bevy-egui-kbgp = "0.20.0"
bevy-tnua = "0.19.0"
bevy-tnua-avian3d = "0.1.0"
bevy-yoleck = { version = "0.22.0", features = ["vpeol", "vpeol_3d"] }
bevy_egui = "0.28.0"
clap = { version = "4.5.9", features = ["derive"] }
dolly = "0.5.0"
leafwing-input-manager = "0.14.0"
serde = { version = "1.0.204", features = ["derive"] }
